--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
     margin-top: 50px;
     
   }
-  @media(max-width:1000px) {
+  /*@media(max-width:1000px) {
     .switcher-tab{
         display: flex;
         flex-wrap: wrap;
@@ -72,7 +72,7 @@
         padding: 4px 8px;
     }
   }
-  
+  */
   .switcher-tab ul {
     list-style: none;
     display: flex;
